test/semantics/programs/valid/while-false.fav
x = false
while x {
    y = 2
}
