test/semantics/programs/invalid/while-invalid-condition.fav
x = 4
while x {
    y = 2
}
